--- a/description_of_products/motor/5046/5046_MY.md
+++ b/description_of_products/motor/5046/5046_MY.md
@@ -1,7 +1,7 @@
 # 5046 产品
 ### 产品展示
 
-![](/motor/5046/images/image.png "image")
+![image](/motor/5046/images/image.png "image")
 
 
 | 规格      | 参数    |
